# semanscope

./: .env.example  .gitignore  BUGFIX-PYTHONPATH.md  BUGFIXES-2026-01-26.md  BUGFIXES-FINAL.md  MIGRATION-COMPLETE.md  MIGRATION-STATUS.md  README-migration.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py
data/color-codes/: ACL-0-Zinets-All-chn.color-code.csv  ACL-2-PeterG-ALL-enu.color-code.csv  ACL-2-word-v2-deu.color-code.csv  ACL-3-network-child-v2-chn.color-code.csv  ACL-3-network-haus-arbeit-v2-deu.color-code.csv  ACL-4-numbers-0-chn.color-code.csv  ACL-4-numbers-0-enu.color-code.csv  ACL-4-numbers-500-enu.color-code.csv  ACL-Logographs-chn.color-code.csv  ACL-Logographs-egy-ara.color-code.csv  ICML-network-cultural-chn.color-code.csv  ICML-word-cultural-chn.color-code.csv
data/input/: 0-word_chef-1-enu.txt  ACL-0-Radicals-Kangxi-chn.txt  ACL-0-Zinets-All-chn.txt  ACL-0-Zinets-Pure-chn.txt  ACL-1-Alphabets-All-enu.color-code.csv  ACL-1-Alphabets-All-enu.txt  ACL-1-Alphabets-ara.txt  ACL-1-Alphabets-chn.txt  ACL-1-Alphabets-deu.txt  ACL-1-Alphabets-enu.txt  ACL-1-Alphabets-fas.txt  ACL-1-Alphabets-fra.txt  ACL-1-Alphabets-grk.txt  ACL-1-Alphabets-heb.txt  ACL-1-Alphabets-hin.txt  ACL-1-Alphabets-hye.txt  ACL-1-Alphabets-jpn.txt  ACL-1-Alphabets-kat.txt  ACL-1-Alphabets-kor.txt  ACL-1-Alphabets-rus.txt  ACL-1-Alphabets-spa.txt  ACL-1-Alphabets-tha.txt  ACL-1-Alphabets-tur.txt  ACL-1-Alphabets-vie.txt  ACL-1-Alphabets-words-chn.txt  ACL-2-PeterG-ALL-enu.txt  ACL-2-PeterG-Adj-enu.color-code.csv  ACL-2-PeterG-Adj-enu.txt  ACL-2-PeterG-Noun-enu.color-code.csv  ACL-2-PeterG-Noun-enu.txt  ACL-2-PeterG-Verb-enu.color-code.csv  ACL-2-PeterG-Verb-enu.txt  ACL-2-word-v2-SA.csv  ACL-2-word-v2-ara.csv  ACL-2-word-v2-chn.color-code.csv  ACL-2-word-v2-chn.txt  ACL-2-word-v2-deu.txt  ACL-2-word-v2-enu.txt  ACL-2-word-v2-spa.csv  ACL-3-network-child-v2-chn.txt  (+188 more)
data/metrics/: acl-1-alphabets-qwen3-embedding-06b-phate-unknown_branching.csv  acl-1-alphabets-qwen3-embedding-06b-phate-unknown_clustering.csv  acl-1-alphabets-qwen3-embedding-06b-phate-unknown_summary.csv  acl-1-alphabets-qwen3-embedding-06b-phate-unknown_void.csv  acl-2-peterg-all-qwen3-embedding-06b-phate-unknown_branching.csv  acl-2-peterg-all-qwen3-embedding-06b-phate-unknown_clustering.csv  acl-2-peterg-all-qwen3-embedding-06b-phate-unknown_summary.csv  acl-2-peterg-all-qwen3-embedding-06b-phate-unknown_void.csv  acl-2-peterg-noun-labse-phate-unknown_branching.csv  (+19 more)
demo/: basic_visualization.py
docs/: Torch-GPU.md
scripts/: copy_representative_datasets.sh  verify_setup.py
semanscope/: __init__.py  config.py
tests/: test_all_apis.py  test_gemini_integration.py  test_openrouter_integration.py  test_parallel_performance.py  test_semantic_affinity.py  test_voyage_integration.py
ui/: Welcome.py
(+82 files in other folders)
